force-app/main/default/objects/Recruitment_Opportunity__c/Recruitment_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Recruitment Opportunity managing contractors and jobs. Lookups to the Account and Recruitment Profile objects.</description>
    <label>Recruitment Opportunity</label>
    <nameField>
        <label>Recruitment Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruitment Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>