force-app/main/default/objects/Recruitment_Opportunity__c/fields/Contractor_Recruitment_Profile__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Recruitment_Profile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contractor Recruitment Profile</label>
    <referenceTo>Contractor_Recruitment__c</referenceTo>
    <relationshipLabel>Recruitment Opportunities</relationshipLabel>
    <relationshipName>Recruitment_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>