force-app/main/default/objects/Recruitment_Opportunity__c/fields/Number_of_Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Emails_Sent__c</fullName>
    <label>Number of Emails Sent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>