force-app/main/default/objects/Recruitment_Opportunity__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recruitment Review</fullName>
            </value>
            <value>
                <fullName>Recruitment Dialing</fullName>
            </value>
            <value>
                <fullName>Contractor Recruitment</fullName>
                <isActive>false</isActive>
                <label>Contractor Recruitment</label>
            </value>
            <value>
                <fullName>Task Recruitment</fullName>
                <isActive>false</isActive>
                <label>Task Recruitment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>