force-app/main/default/objects/Recruitment_Opportunity__c/fields/Property_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Property_Activation_Date__c</fullName>
    <label>Property Activation Date</label>
    <type>Date</type>
</CustomField>