force-app/main/default/objects/Recruitment_Opportunity__c/fields/Reason_Revoked__c.field-meta.xml
<CustomField>
    <fullName>Reason_Revoked__c</fullName>
    <description>Reason that the opportunity request was revoked (dependent on status field)</description>
    <inlineHelpText>Select the reason that the opportunity request was revoked.</inlineHelpText>
    <label>Reason Revoked</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>No Longer Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>