force-app/main/default/objects/Recruitment_Opportunity__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Request</fullName>
                <label>New</label>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Work Scheduled</fullName>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Request Revoked</fullName>
                <label>Revoked</label>
            </value>
            <value>
                <fullName>Contacting Prospects</fullName>
                <isActive>false</isActive>
                <label>Contacting Prospects</label>
            </value>
            <value>
                <fullName>Prospect Found - Creating Account</fullName>
                <isActive>false</isActive>
                <label>Prospect Found - Creating Account</label>
            </value>
            <value>
                <fullName>Sourcing Prospects</fullName>
                <isActive>false</isActive>
                <label>Sourcing Prospects</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>