force-app/main/default/objects/Recruitment_Opportunity__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer Cancelled</fullName>
            </value>
            <value>
                <fullName>Unable to Find a Contractor</fullName>
            </value>
            <value>
                <fullName>Task Incorrectly Added to Dialing</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>