force-app/main/default/objects/Recruitment_Opportunity__c/fields/Total_Calls_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Total_Calls_Rollup__c</fullName>
    <label>Total Calls</label>
    <summarizedField>Recruitment_Opportunity_Prospect__c.Call_Count__c</summarizedField>
    <summaryForeignKey>Recruitment_Opportunity_Prospect__c.Recruitment_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>