force-app/main/default/objects/Recruitment_Opportunity__c/fields/Total_Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Task_Count__c</fullName>
    <label>Total Task Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>