force-app/main/default/objects/Recruitment_Opportunity__c/fields/Work_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Scheduled_Date__c</fullName>
    <description>Date the work was scheduled. When a opportunity is moved to status &quot;Work Scheduled&quot; The work scheduled date is required.</description>
    <label>Work Scheduled Date</label>
    <type>Date</type>
</CustomField>