force-app/main/default/objects/Recruitment_Opportunity__c/fields/Work_Scheduled_With__c.field-meta.xml
<CustomField>
    <fullName>Work_Scheduled_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Scheduled With</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Contractor_Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recruitment Opportunities</relationshipLabel>
    <relationshipName>Recruitment_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>