force-app/main/default/objects/Recruitment_Opportunity__c/validationRules/Recruitment_Oppty_Work_Scheduled_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Recruitment_Oppty_Work_Scheduled_Date</fullName>
    <active>false</active>
    <description>Work Scheduled Date must be entered when a recruitment opportunity status is changed to &quot;Work Scheduled&quot;.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &apos;Work Scheduled&apos;),
    ISBLANK( Work_Scheduled_Date__c )
)</errorConditionFormula>
    <errorMessage>Please enter a &quot;Work Scheduled Date&quot;.</errorMessage>
</ValidationRule>