force-app/main/default/objects/Recruitment_Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Property_Activation_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>