force-app/main/default/objects/Recruitment_Opportunity__c/listViews/Contractor_Recruitment_Recruitment_Opportunity.listView-meta.xml
<ListView>
    <fullName>Contractor_Recruitment_Recruitment_Opportunity</fullName>
    <filterScope>Queue</filterScope>
    <label>Contractor Recruitment</label>
    <queue>Contractor_Recruitment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>