force-app/main/default/objects/Recruitment_Opportunity__c/listViews/Recruitment_Opportunities_New_Vertica1.listView-meta.xml
<ListView>
    <fullName>Recruitment_Opportunities_New_Vertica1</fullName>
    <booleanFilter>(1 or 2 or 3) AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>State__c</columns>
    <columns>Status__c</columns>
    <columns>Task_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Colbe Parker</value>
    </filters>
    <filters>
        <field>Task_Type__c</field>
        <operation>equals</operation>
        <value>Sales Cleans</value>
    </filters>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
        <value>Pool Cleaning</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Request Revoked</value>
    </filters>
    <label>Recruitment Opportunities - New Vertical</label>
    <sharedTo>
        <group>New_Verticals_Recruitment_Team</group>
        <group>New_Verticals_Team</group>
    </sharedTo>
</ListView>